--- a/app/src/main/res/layout/activity_creatediary.xml
+++ b/app/src/main/res/layout/activity_creatediary.xml
@@ -44,6 +44,7 @@
         android:layout_height="319dp"
         android:layout_margin="16dp"
         android:background="@drawable/rounded_edittext_background"
+        android:gravity="top|left"
         android:hint="type here..."
         android:inputType="text"
         android:padding="10dp"
